2014-07-20  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (divi): Support one-argument form.
	Use "/" name in error reporting, not "divi".

	* eval.c (eval_init): Change registration of / so only
	one argument is required out of two.

	* txr.1: Document one-argument division.

2014-07-20  Kaz Kylheku  <kaz@kylheku.com>

	* genvim.txr: Fixed highlighting issues in numbers followed by newline.

	* txr.vim: Regenerated.

2014-07-19  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (search_str): Support negative starting index.
	Hoist uselessly repeated c_str operation out of loop.

	* txr.1: Document negative starting index for search-str.

2014-07-19  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (hash_construct): Nullify the pairs argument so that
	it works correctly with an empty vector.

	* txr.1: Write missing documentation for hash-construct.

2014-07-19  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (mapdov): New function.
	(eval_init): Register mapdo intrinsic.

	* lib.c (mapdo): New function.

	* lib.h (mapdo): Declared.

	* txr.1: Documented mapdo.  Documented zero-argument case
	for mapcar, mapcar*, mappend and mappend*.

2014-07-19  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (put_strings, put_lines): New functions.
	(stream_init): Registered new functions as intrinsics.

	* stream.h (put_strings, put_lines): Declared.

	* txr.1: Documented.

2014-07-19  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register get-lines as a synonym for lazy-stream-cons.

	* stream.c (get_string): New function.

	* stream.h (get_string): Declared.
	(stream_init): get_string registered as get-string intrinsic.

	* txr.1: Documented get-string, and get-lines as a synonym for
	lazy-stream-cons.  Documented the behavioral difference of
	lazy-stream-cons lazy lists for real-time and non-real-time streams.

2014-07-18  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (conftest, conftest2): Link math
	library so we can test for math functions.

	* arith.c (log2_init): New static function.